# euler

./: .gitignore  README.md  pyproject.toml
euler/: helper.py  prime.py
euler/problems/: firstten.py  fourthten.py  problems1to10.py  problems21to30.py  problems31to40.py  problems41-50.py  problems41to50.py  problems51to60.py  problems61to70.py  secondten.py  thirdten.py
problems/: 1-10.py
tests/: test_firstten.py  test_fourthten.py  test_helper.py  test_prime.py  test_problems11to20.py  test_problems1to10.py  test_problems21to30.py  test_problems31to40.py  test_problems41-50.py  test_problems41to50.py  test_problems51to60.py  test_problems61to70.py  test_problems_1-10.py  test_secondten.py  test_thirdten.py
