[tool.poetry]
name = "euler"
version = "0.1.0"
description = ""
authors = ["Auren Clarke <aurenclarke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
