[tool.poetry]
name = "euler"
version = "0.1.0"
description = ""
authors = ["Auren Clarke <aurenclarke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
black = "^22.6.0"
numpy = "^1.23.1"
sympy = "^1.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
